fix: 쿠키 파싱 로직 오류 수정