@@ -24,13 +24,14 @@ public class HttpCookie {
 
     private static Map<String, String> parseCookies(final String rawCookie) {
         return Arrays.stream(rawCookie.trim().split(HttpSplitFormat.COOKIE.getValue()))
+                .map(String::trim)
                 .filter(rawCookieElement -> !rawCookieElement.isBlank())
                 .map(rawCookieElement -> rawCookieElement.split(HttpSplitFormat.COOKIE_ELEMENT.getValue(), 2))
-                .filter(cookieElement -> cookieElement.length != 2)
-                .filter(cookieElement -> cookieElement[0].isBlank())
+                .filter(cookieElement -> cookieElement.length == 2)
+                .filter(cookieElement -> !cookieElement[0].trim().isEmpty())
                 .collect(Collectors.toMap(
-                        cookieElement -> cookieElement[0],
-                        cookieElement -> cookieElement[1]
+                        cookieElement -> cookieElement[0].trim(),
+                        cookieElement -> cookieElement[1].trim()
                 ));
     }
 
